# lockbox

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.svelte  main.ts  stores.ts  styles.scss  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: HashKey.svelte  MainArea.svelte  NavBar.svelte
