[package]
name = "lockbox"
version = "1.1.0"
description = "A password manager made using Tauri."
authors = ["anotherpillow"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.7"
magic-crypt = "3.1.12"
blake2 = "0.10.6"
bcrypt = "0.15.0"
md5 = "0.7.0"
argon2 = "0.5.2"
hex = "0.4.3"
ripemd = "0.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
